snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
5d7096a115bcb9ce35d3518a80a5877dde88d7bf